--- a/src/styles/settings/mixins.sass
+++ b/src/styles/settings/mixins.sass
@@ -12,9 +12,9 @@
     background-color: rgba($color-accent, .35)
     transition: $transition
   &:before
-    left: 0
+    left: 50%
   &:after
-    right: 0
+    right: 50%
   &:hover
     color: $color-accent
     &:before,
