--- a/src/styles/styles.sass
+++ b/src/styles/styles.sass
@@ -21,3 +21,4 @@
 
 @import './components/post/styles'
 @import './components/post/posts-list/styles'
+@import './components/post/posts-list/remaining-posts/styles'
