--- a/src/styles/layout/containers.sass
+++ b/src/styles/layout/containers.sass
@@ -5,19 +5,26 @@
 
 .main-wrapper
   height: 100vh
-  &__inner
-    display: flex
   &__aside
     position: fixed
     top: 50px
     bottom: 50px
     width: 120px
+    transform: translateX(-140px)
+    transition: $transition
     &-inner
       position: absolute
       height: 100%
       padding-right: 15px
       overflow-y: auto
-  &__main
-    width: 100%
-    padding-top: 12px
-    padding-left: 200px
+
+@media only screen and (min-width: 768px)
+  .main-wrapper
+    &__inner
+      display: flex
+    &__aside
+      transform: none
+    &__main
+      width: 100%
+      padding-top: 12px
+      padding-left: 200px
