--- a/src/components/soc-links/styles.sass
+++ b/src/components/soc-links/styles.sass
@@ -1,8 +1,8 @@
 .soc-links
-  display: block
+  display: flex
+  align-items: center
+  margin-top: 10px
   &__item
-    display: inline-block
-    vertical-align: middle
     &:not(:last-child)
       margin-right: 14px
   &__link
