--- a/src/components/header/main-nav/styles.sass
+++ b/src/components/header/main-nav/styles.sass
@@ -1,10 +1,19 @@
 .main-nav
   &__list
+    margin: 30px -7px
   &__item
     display: block
-    margin-bottom: 15px
+    padding: 7px
+    box-sizing: border-box
   &__link
     display: inline-block
     font-size: 20px
     color: $color-text-lighter
     +line-hover
+
+@media only screen and (max-width: 767px)
+  .main-nav
+    &__list
+      display: flex
+      align-items: center
+      flex-wrap: wrap
