--- a/src/components/header/styles.sass
+++ b/src/components/header/styles.sass
@@ -1,4 +1,11 @@
-.header
-  display: inline-block
-  .logo
-    margin-bottom: 40px
+@media only screen and (min-width: 768px)
+  .header
+    display: inline-block
+    .logo
+      margin-bottom: 40px
+
+@media only screen and (max-width: 767px)
+  .header
+    display: flex
+    flex-direction: column
+    align-items: flex-start
