--- a/src/styles/styles.sass
+++ b/src/styles/styles.sass
@@ -4,6 +4,7 @@
 
 @import './basic/basic'
 @import './basic/titles'
+@import './basic/animations'
 
 @import './icomoon/icomoon'
 
@@ -15,10 +16,10 @@
 @import './components/header/logo/styles'
 @import './components/header/main-nav/styles'
 
-@import './components/main/styles'
-
 @import './components/soc-links/styles'
 
-@import './components/post/styles'
-@import './components/post/posts-list/styles'
-@import './components/post/posts-list/remaining-posts/styles'
+@import './pages/Posts-list/components/styles'
+@import './pages/Posts-list/components/last-post/styles'
+@import './pages/Posts-list/components/remaining-posts/styles'
+
+@import './pages/Post/styles'
