--- a/src/components/header/logo/styles.sass
+++ b/src/components/header/logo/styles.sass
@@ -14,3 +14,7 @@
     padding: 0 2px
     font-size: 18px
     letter-spacing: .7pt
+
+@media only screen and (min-width: 768px)
+  .logo
+    margin-bottom: 40px
