--- a/src/pages/Posts-list/components/last-post/styles.sass
+++ b/src/pages/Posts-list/components/last-post/styles.sass
@@ -4,11 +4,16 @@
   a
     display: inline-block
   &__title
-    margin-bottom: 30px
+    margin-bottom: 10px
+    line-height: 1.3
     a
       transition: $transition
       &:hover
         color: $color-accent
+  &__tag
+    margin-bottom: 30px
+    color: rgba($color-text-lighter, .4)
+    font-size: 16px
   &__img
     margin-bottom: 20px
   img
