--- a/src/pages/Posts-list/components/remaining-posts/styles.sass
+++ b/src/pages/Posts-list/components/remaining-posts/styles.sass
@@ -15,10 +15,15 @@
     visibility: hidden
   &__title
     margin-bottom: 10px
+    line-height: 1.3
     a
       transition: $transition
       &:hover
         color: $color-accent
+  &__tag
+    margin-bottom: 15px
+    color: rgba($color-text-lighter, .4)
+    font-size: 16px
   &__desc
     +overflow-text(3, 18px)
 
