--- a/src/styles/layout/containers.sass
+++ b/src/styles/layout/containers.sass
@@ -5,16 +5,13 @@
 
 @media only screen and (min-width: 768px)
   .main-wrapper
-    height: 100vh
-    &__inner
-      display: flex
+    display: flex
     &__aside
-      transform: none
       position: fixed
       top: 50px
       bottom: 50px
       width: 120px
-      &-inner
+      .aside-wrapper
         position: absolute
         height: 100%
         padding-right: 15px
