Add router links

--- a/src/styles/basic/animations.sass
+++ b/src/styles/basic/animations.sass
@@ -1,8 +1,8 @@
 .togglePage
   &-leave-active
-    animation: tooglePage 1s reverse
+    animation: tooglePage .5s reverse
   &-enter-active
-    animation: tooglePage 1s
+    animation: tooglePage .5s
 
 @keyframes tooglePage
   from
