Split into paragraphs

--- a/src/pages/Posts-list/components/remaining-posts/styles.sass
+++ b/src/pages/Posts-list/components/remaining-posts/styles.sass
@@ -25,6 +25,7 @@
     color: rgba($color-text-lighter, .4)
     font-size: 16px
   &__desc
+    margin-bottom: 20px
     +overflow-text(3, 18px)
 
 @media only screen and (min-width: 480px)
