--- a/src/pages/Posts-list/components/remaining-posts/styles.sass
+++ b/src/pages/Posts-list/components/remaining-posts/styles.sass
@@ -20,10 +20,16 @@
       transition: $transition
       &:hover
         color: $color-accent
-  &__tag
+  &__tags
     margin-bottom: 15px
     color: rgba($color-text-lighter, .4)
     font-size: 16px
+  &__tag
+    display: inline-block
+    vertical-align: middle
+    margin-bottom: 5px
+    &:not(:last-child)
+      margin-right: 7px
   &__desc
     margin-bottom: 20px
     +overflow-text(3, 18px)
