--- a/src/styles/styles.sass
+++ b/src/styles/styles.sass
@@ -18,7 +18,11 @@
 
 @import './components/soc-links/styles'
 
-@import './pages/Posts-list/components/styles'
-@import './pages/Posts-list/components/remaining-posts/styles'
+@import './components/preview-posts/styles'
 
 @import './pages/Post/styles'
+
+.more-link
+  font-size: 18px
+  color: $color-text-lighter
+  +line-hover
