--- a/src/components/header/main-nav/styles.sass
+++ b/src/components/header/main-nav/styles.sass
@@ -1,15 +1,18 @@
 .main-nav
   &__list
     margin: 30px -7px
-  &__item
-    display: block
-    padding: 7px
-    box-sizing: border-box
   &__link
     display: inline-block
     font-size: 20px
     color: $color-text-lighter
     +line-hover
+  &__item
+    display: block
+    padding: 7px
+    box-sizing: border-box
+    .main-nav__link
+      &.is-active
+        color: $color-accent
 
 @media only screen and (max-width: 767px)
   .main-nav
