--- a/src/components/header/main-nav/styles.sass
+++ b/src/components/header/main-nav/styles.sass
@@ -3,6 +3,7 @@
     margin: 30px -7px
   &__link
     display: inline-block
+    vertical-align: middle
     font-size: 20px
     color: $color-text-lighter
     +line-hover
@@ -13,6 +14,12 @@
     .main-nav__link
       &.is-active
         color: $color-accent
+  .u-small
+    display: inline-block
+    vertical-align: middle
+    margin-left: 4px
+    font-size: 12px
+    color: rgba($color-text-lighter, .5)
 
 @media only screen and (max-width: 767px)
   .main-nav
