--- a/src/styles/layout/containers.sass
+++ b/src/styles/layout/containers.sass
@@ -6,6 +6,8 @@
 @media only screen and (min-width: 768px)
   .main-wrapper
     display: flex
+    height: 100vh
+    overflow-y: auto
     &__aside
       position: fixed
       top: 50px
