--- a/src/styles/styles.sass
+++ b/src/styles/styles.sass
@@ -18,7 +18,11 @@
 
 @import './components/soc-links/styles'
 
+@import './ui/modal/styles'
+
 @import './components/preview-posts/styles'
+
+@import './components/modals/gallery-modal/styles'
 
 @import './pages/Post/styles'
 
