--- a/src/components/modals/gallery-modal/styles.sass
+++ b/src/components/modals/gallery-modal/styles.sass
@@ -14,30 +14,30 @@
           position: absolute
           bottom: 0
           height: 1px
+          z-index: 1
         &:before
-          left: 10px
+          left: 20px
           right: 50%
           background: linear-gradient(to left, rgba($color-text, .2) 0%,rgba($color-text, 0) 100%)
         &:after
-          right: 10px
+          right: 20px
           left: 50%
           background: linear-gradient(to right, rgba($color-text, .2) 0%,rgba($color-text, 0) 100%)
   &__const
     position: relative
     min-width: 200px
-  &__img
   &__text
     padding: 20px
     padding-bottom: 50px
   &__title
-    margin-bottom: 15px
+    margin-bottom: 10px
     font-family: $title-font
-    font-size: 22px
+    font-size: 18px
     font-weight: bold
     line-height: 1.2
   &__desc
-    font-size: 14px
-    line-height: 1.4
+    font-size: 13px
+    line-height: 1.5
 
 @media only screen and (min-width: 768px)
   .gallery
@@ -50,5 +50,16 @@
     &__text
       position: absolute
       height: 100%
-      padding: 20px
-      overflow-y: auto
+      padding: 35px 20px
+      &:before
+        content: ""
+        position: absolute
+        top: 0
+        right: 0
+        bottom: 0
+        left: 0
+        display: block
+        border-top: 35px solid #ffffff
+        border-bottom: 35px solid #ffffff
+        border-left: 20px solid #ffffff
+        border-right: 20px solid #ffffff
