--- a/src/pages/Post/styles.sass
+++ b/src/pages/Post/styles.sass
@@ -22,13 +22,13 @@
       margin-right: 7px
   &__img
     margin-bottom: 20px
-    &--link
-      cursor: pointer
+    cursor: pointer
   img
     display: block
     max-width: 100%
   &__desc
     margin-bottom: 20px
     +overflow-text(7)
-
-.modal
+  &__gallery-item
+    &:not(:last-child)
+      margin-bottom: 40px
