Add logo, correct img

--- a/src/components/header/logo/styles.sass
+++ b/src/components/header/logo/styles.sass
@@ -4,7 +4,7 @@
   color: rgba($color-text, .9)
   &__link
     display: inline-block
-    text-align: right
+    text-align: center
   &__main
     display: block
     font-size: 52px
@@ -14,6 +14,9 @@
     padding: 0 2px
     font-size: 18px
     letter-spacing: .7pt
+  img
+    display: inline-block
+    opacity: .95
 
 @media only screen and (min-width: 768px)
   .logo
