--- a/src/pages/Post/styles.sass
+++ b/src/pages/Post/styles.sass
@@ -22,9 +22,11 @@
       margin-right: 7px
   &__img
     margin-bottom: 20px
+    text-align: center
+    font-size: 0
     cursor: pointer
   img
-    display: block
+    display: inline-block
     max-width: 100%
   &__desc
     margin-bottom: 20px
