--- a/src/pages/Post/styles.sass
+++ b/src/pages/Post/styles.sass
@@ -21,16 +21,19 @@
     &:not(:last-child)
       margin-right: 7px
   &__img
-    margin-bottom: 20px
+    margin: 0 -4px 40px
     text-align: center
     font-size: 0
     cursor: pointer
   img
     display: inline-block
     max-width: 100%
+    padding: 0 4px
   &__desc
     margin-bottom: 20px
     +overflow-text(7)
   &__gallery-item
     &:not(:last-child)
       margin-bottom: 40px
+  .u-half
+    max-width: 50%
