--- a/src/pages/Post/styles.sass
+++ b/src/pages/Post/styles.sass
@@ -24,16 +24,19 @@
     margin: 0 -4px 40px
     text-align: center
     font-size: 0
+    text-align: left
     cursor: pointer
   img
     display: inline-block
     max-width: 100%
-    padding: 0 4px
+    padding: 4px
   &__desc
     margin-bottom: 20px
     +overflow-text(7)
   &__gallery-item
     &:not(:last-child)
       margin-bottom: 40px
-  .u-half
+  .u-50
     max-width: 50%
+  .u-33
+    max-width: 33.3333%
