--- a/src/components/header/main-nav/styles.sass
+++ b/src/components/header/main-nav/styles.sass
@@ -30,3 +30,7 @@
       display: flex
       align-items: center
       flex-wrap: wrap
+      margin-left: -17px
+      margin-right: -17px
+    &__item
+      margin: 0 10px
