--- a/src/styles/settings/variables.sass
+++ b/src/styles/settings/variables.sass
@@ -1,7 +1,7 @@
 // fonts
-$logo-font: 'Roboto Condensed', sans-serif
-$title-font: 'Lustria', sans-serif
-$primary-font: 'Lato', sans-serif
+$logo-font: 'Montserrat', sans-serif
+$title-font: 'Montserrat', sans-serif
+$primary-font: 'Source Sans Pro', sans-serif
 
 // colors
 $background-body: #FFFCFC
