--- a/src/styles/styles.sass
+++ b/src/styles/styles.sass
@@ -24,6 +24,8 @@
 
 @import './components/modals/gallery-modal/styles'
 
+@import './components/copyright/styles'
+
 @import './pages/Post/styles'
 
 .more-link
