--- a/src/styles/layout/containers.sass
+++ b/src/styles/layout/containers.sass
@@ -1,14 +1,20 @@
 .container
   max-width: 1200px
   width: 100%
-  padding: 50px 20px
+  padding: 0 20px
   margin: 0 auto
+
+.main-wrapper
+  &__aside
+    padding-top: 15px
 
 @media only screen and (min-width: 768px)
   .main-wrapper
     display: flex
     height: 100vh
     overflow-y: auto
+    flex-direction: column
+    justify-content: space-between
     &__aside
       position: fixed
       top: 50px
@@ -21,6 +27,6 @@
         overflow-y: auto
     &__main
       width: 100%
-      padding-top: 12px
+      padding-top: 70px
       padding-bottom: 50px
       padding-left: 170px
