--- a/src/styles/icomoon/icomoon.sass
+++ b/src/styles/icomoon/icomoon.sass
@@ -1,7 +1,7 @@
 @font-face
   font-family: 'icomoon'
   src: url('./styles/icomoon/fonts/icomoon.eot')
-  src: url('./styles/icomoon/fonts/icomoon.eot?5s3ip5#iefix') format('embedded-opentype'), url('./styles/icomoon/fonts/icomoon.ttf?5s3ip5') format('truetype'), url('./styles/icomoon/fonts/icomoon.woff?5s3ip5') format('woff'), url('./styles/icomoon/fonts/icomoon.svg?5s3ip5#icomoon') format('svg')
+  src: url('./styles/icomoon/fonts/icomoon.eot?sem08m#iefix') format('embedded-opentype'), url('./styles/icomoon/fonts/icomoon.ttf?sem08m') format('truetype'), url('./styles/icomoon/fonts/icomoon.woff?sem08m') format('woff'), url('./styles/icomoon/fonts/icomoon.svg?sem08m#icomoon') format('svg')
   font-weight: normal
   font-style: normal
 
@@ -20,7 +20,11 @@
   -moz-osx-font-smoothing: grayscale
 
 .icon
-  &-facebook:before
+  &-arrow-right:before
     content: "\e900"
-  &-instagram:before
+  &-arrow-left:before
     content: "\e901"
+  &-facebook:before
+    content: "\e902"
+  &-instagram:before
+    content: "\e903"
