--- a/src/components/header/logo/styles.sass
+++ b/src/components/header/logo/styles.sass
@@ -2,6 +2,7 @@
   font-family: $logo-font
   text-transform: uppercase
   color: rgba($color-text, .9)
+  cursor: pointer
   &__link
     display: inline-block
     text-align: center
