--- a/src/components/copyright/styles.sass
+++ b/src/components/copyright/styles.sass
@@ -9,3 +9,7 @@
     width: 100%
     padding: 30px 20px 20px
     margin: 0 auto
+
+@media only screen and (min-width: 768px)
+  .footer
+    display: none
