--- a/src/components/preview-posts/styles.sass
+++ b/src/components/preview-posts/styles.sass
@@ -7,6 +7,23 @@
     background-position: center
     background-size: cover
     background-repeat: no-repeat
+    cursor: pointer
+    &:before
+      content: ''
+      position: absolute
+      top: 0
+      right: 0
+      bottom: 0
+      left: 0
+      display: block
+      background-color: rgba(#000000, .1)
+      opacity: 0
+      visibility: hidden
+      transition: all .2s linear
+    &:hover
+      &:before
+        opacity: 1
+        visibility: visible
   &__dummy-img
     display: block
     max-width: 100%
