--- a/src/pages/Post/styles.sass
+++ b/src/pages/Post/styles.sass
@@ -29,8 +29,27 @@
     text-align: center
     font-size: 0
     cursor: pointer
-    img
+    font-size: 0
+    &-item
+      position: relative
+      display: inline-block
       padding: 4px
+      &:before
+        content: ''
+        position: absolute
+        top: 4px
+        right: 4px
+        bottom: 4px
+        left: 4px
+        display: block
+        background-color: rgba(#000000, .1)
+        opacity: 0
+        visibility: hidden
+        transition: all .2s linear
+      &:hover
+        &:before
+          opacity: 1
+          visibility: visible
   &__desc
     margin-bottom: 20px
     +overflow-text(7)
@@ -46,7 +65,6 @@
     max-width: 350px
     width: 100%
     font-size: 0
-    cursor: default
     img
       max-height: 100%
 
