--- a/src/components/header/main-nav/styles.sass
+++ b/src/components/header/main-nav/styles.sass
@@ -13,6 +13,7 @@
     display: inline-block
     font-size: 20px
     color: $color-text-lighter
+    cursor: pointer
     +line-hover
   &__count
     position: absolute
