--- a/src/components/modals/gallery-modal/styles.sass
+++ b/src/components/modals/gallery-modal/styles.sass
@@ -49,7 +49,7 @@
         opacity: 1
         visibility: visible
       .gallery__arrow
-        color: rgba(255, 255, 255, 1)
+        color: rgba(255, 255, 255, .8)
 
 
 @media only screen and (min-width: 768px)
