Add scroll behaviour

--- a/src/styles/layout/containers.sass
+++ b/src/styles/layout/containers.sass
@@ -6,8 +6,8 @@
 
 .main-wrapper
   display: flex
-  height: 100vh
-  overflow-y: auto
+  // height: 100vh
+  // overflow-y: auto
   flex-direction: column
   justify-content: space-between
   &__aside
