--- a/src/styles/layout/containers.sass
+++ b/src/styles/layout/containers.sass
@@ -6,12 +6,13 @@
 
 .main-wrapper
   display: flex
-  // height: 100vh
-  // overflow-y: auto
   flex-direction: column
   justify-content: space-between
   &__aside
     padding-top: 15px
+  &.is-fixed
+    height: 100vh
+    overflow-y: auto
 
 @media only screen and (min-width: 768px)
   .main-wrapper
