--- a/src/styles/basic/basic.sass
+++ b/src/styles/basic/basic.sass
@@ -5,6 +5,8 @@ body
   color: $color-text
   background-color: $background-body
   -webkit-overflow-scrolling: touch
+  &.is-fixed
+    overflow: hidden
 
 a
   color: inherit
