--- a/src/components/header/main-nav/styles.sass
+++ b/src/components/header/main-nav/styles.sass
@@ -9,6 +9,9 @@
     &.is-active
       .main-nav__link
         color: $color-accent
+      .main-nav__count
+        opacity: 1
+        visibility: visible
   &__link
     display: inline-block
     font-size: 20px
@@ -19,11 +22,13 @@
     position: absolute
     margin-top: -2px
     padding-left: 3px
-    display: inline-block
     font-size: 12px
     color: rgba($color-accent, .7)
     text-align: left
+    opacity: 0
+    visibility: hidden
     z-index: 1
+    transition: all .2s linear
 
 @media only screen and (max-width: 767px)
   .main-nav
