--- a/src/components/header/logo/styles.sass
+++ b/src/components/header/logo/styles.sass
@@ -5,15 +5,16 @@
   cursor: pointer
   &__link
     display: inline-block
-    text-align: center
+    // text-align: center
   &__main
     display: block
-    font-size: 52px
+    margin-bottom: 5px
+    font-size: 28px
     font-weight: bold
   &__text
     display: block
     padding: 0 2px
-    font-size: 18px
+    font-size: 16px
     letter-spacing: .7pt
   img
     display: inline-block
