--- a/src/components/preview-posts/styles.sass
+++ b/src/components/preview-posts/styles.sass
@@ -8,22 +8,7 @@
     background-size: cover
     background-repeat: no-repeat
     cursor: pointer
-    &:before
-      content: ''
-      position: absolute
-      top: 0
-      right: 0
-      bottom: 0
-      left: 0
-      display: block
-      background-color: rgba(#000000, .1)
-      opacity: 0
-      visibility: hidden
-      transition: all .2s linear
-    &:hover
-      &:before
-        opacity: 1
-        visibility: visible
+    +img-hover
   &__dummy-img
     display: block
     max-width: 100%
@@ -33,7 +18,8 @@
   &__title
     margin-bottom: 10px
     line-height: 1.3
-    a
+    &-link
+      cursor: pointer
       transition: $transition
       &:hover
         color: $color-accent
