--- a/src/pages/Post/styles.sass
+++ b/src/pages/Post/styles.sass
@@ -4,12 +4,11 @@
   img
     display: inline-block
     max-width: 100%
-  a
-    display: inline-block
   &__title
     margin-bottom: 10px
     line-height: 1.3
-    a
+    &-link
+      cursor: pointer
       transition: $transition
       &:hover
         color: $color-accent
@@ -29,27 +28,11 @@
     text-align: center
     font-size: 0
     cursor: pointer
-    font-size: 0
     &-item
       position: relative
       display: inline-block
       padding: 4px
-      &:before
-        content: ''
-        position: absolute
-        top: 4px
-        right: 4px
-        bottom: 4px
-        left: 4px
-        display: block
-        background-color: rgba(#000000, .1)
-        opacity: 0
-        visibility: hidden
-        transition: all .2s linear
-      &:hover
-        &:before
-          opacity: 1
-          visibility: visible
+      +img-hover(4px)
   &__desc
     margin-bottom: 20px
     +overflow-text(7)
