--- a/src/styles/settings/mixins.sass
+++ b/src/styles/settings/mixins.sass
@@ -31,3 +31,21 @@
   -webkit-box-orient: vertical
   overflow: hidden
   text-overflow: ellipsis
+
+@mixin img-hover($space: 0)
+  &:before
+    content: ''
+    position: absolute
+    top: $space
+    right: $space
+    bottom: $space
+    left: $space
+    display: block
+    background-color: rgba(#000000, .1)
+    opacity: 0
+    visibility: hidden
+    transition: all .2s linear
+  &:hover
+    &:before
+      opacity: 1
+      visibility: visible
