--- a/src/components/header/logo/styles.sass
+++ b/src/components/header/logo/styles.sass
@@ -8,14 +8,14 @@
     // text-align: center
   &__main
     display: block
-    margin-bottom: 5px
     font-size: 28px
     font-weight: bold
   &__text
     display: block
+    margin-top: 2px
     padding: 0 2px
-    font-size: 16px
-    letter-spacing: .7pt
+    font-size: 10px
+    letter-spacing: 1pt
   img
     display: inline-block
     max-width: 50px
