--- a/src/pages/Post/styles.sass
+++ b/src/pages/Post/styles.sass
@@ -49,7 +49,8 @@
     width: 100%
     font-size: 0
     img
-      max-height: 100%
+      max-width: 100%
+      max-height: 22vw
 
 @media only screen and (min-width: 480px)
   .post
