--- a/src/styles/styles.sass
+++ b/src/styles/styles.sass
@@ -1,6 +1,7 @@
 @import './settings/normalize'
 @import './settings/variables'
 @import './settings/mixins'
+@import './settings/utilities'
 
 @import './basic/basic'
 @import './basic/titles'
