--- a/src/components/header/logo/styles.sass
+++ b/src/components/header/logo/styles.sass
@@ -5,7 +5,8 @@
   cursor: pointer
   &__link
     display: inline-block
-    // text-align: center
+    &.is-active
+      cursor: default
   &__main
     display: block
     font-size: 28px
