--- a/src/styles/styles.sass
+++ b/src/styles/styles.sass
@@ -22,5 +22,6 @@
 @import './components/copyright/styles'
 
 @import './ui/modal/styles'
+@import './ui/search/styles'
 
 @import './pages/Post/styles'
