--- a/src/styles/basic/basic.sass
+++ b/src/styles/basic/basic.sass
@@ -21,3 +21,22 @@ p
 
 img
   max-width: 100%
+
+input
+  outline: none
+  padding: 5px
+  box-shadow: none
+  border: 0
+  border-bottom: solid 1px rgba($color-text, .3)
+  background: transparent
+  font-size: 16px
+  line-height: 1.3
+  color: $color-text
+  transition: $transition
+  &::-webkit-input-placeholder
+    color: rgba($color-text, .2)
+    transition: $transition
+  &:focus
+    border-bottom: solid 1px rgba($color-text, 5)
+    &::-webkit-input-placeholder
+      color: rgba($color-text, .3)
