--- a/src/components/header/logo/styles.sass
+++ b/src/components/header/logo/styles.sass
@@ -1,5 +1,5 @@
 .logo
-  font-family: $logo-font
+  font-family: $decorate-font
   text-transform: uppercase
   color: rgba($color-text, .9)
   cursor: pointer
