--- a/src/components/preview-posts/styles.sass
+++ b/src/components/preview-posts/styles.sass
@@ -1,5 +1,6 @@
 .post-prev
-  margin-bottom: 70px
+  &:not(:last-child)
+    margin-bottom: 70px
   &__img
     position: relative
     display: block
