--- a/src/styles/settings/variables.sass
+++ b/src/styles/settings/variables.sass
@@ -1,6 +1,5 @@
 // fonts
-$logo-font: 'Montserrat', sans-serif
-$title-font: 'Montserrat', sans-serif
+$decorate-font: 'Montserrat', sans-serif
 $primary-font: 'Source Sans Pro', sans-serif
 
 // colors
