--- a/src/styles/layout/containers.sass
+++ b/src/styles/layout/containers.sass
@@ -10,6 +10,8 @@
   justify-content: space-between
   &__aside
     padding-top: 20px
+  &__main
+    padding-bottom: 70px
 
 @media only screen and (min-width: 768px)
   .main-wrapper
@@ -26,5 +28,4 @@
     &__main
       width: 100%
       padding-top: 65px
-      padding-bottom: 50px
       padding-left: 170px
