--- a/src/styles/styles.sass
+++ b/src/styles/styles.sass
@@ -1,4 +1,5 @@
 @import './settings/normalize'
+@import './settings/fonts'
 @import './settings/variables'
 @import './settings/mixins'
 @import './settings/utilities'
