--- a/src/styles/basic/basic.sass
+++ b/src/styles/basic/basic.sass
@@ -34,6 +34,7 @@ input
   color: $color-text
   transition: $transition
   &::-webkit-input-placeholder
+    font-size: 14px
     color: rgba($color-text, .2)
     transition: $transition
   &:focus
