--- a/src/styles/styles.sass
+++ b/src/styles/styles.sass
@@ -25,6 +25,8 @@
 @import './ui/modal/styles'
 @import './ui/search/styles'
 
+@import './pages/Posts-list/styles'
+
 @import './pages/Post/styles'
 
 @import './pages/About/styles'
