--- a/src/styles/layout/containers.sass
+++ b/src/styles/layout/containers.sass
@@ -2,8 +2,12 @@
   position: relative
   max-width: 1200px
   width: 100%
-  padding: 0 20px
+  padding: 0 10px
   margin: 0 auto
+
+@media only screen and (min-width: 768px)
+  .container
+    padding: 0 20px
 
 .main-wrapper
   display: flex
