--- a/src/ui/modal/styles.sass
+++ b/src/ui/modal/styles.sass
@@ -4,7 +4,7 @@
   right: 0
   bottom: 0
   left: 0
-  padding: 50px 20px
+  padding: 50px 10px
   text-align: center
   overflow-y: auto
   z-index: 100
@@ -32,7 +32,7 @@
     margin-left: -.1%
   &__close
     position: absolute
-    right: 20px
+    right: 10px
     top: 15px
     text-decoration: none
     font-size: 40px
@@ -40,6 +40,13 @@
     color: #fff
     outline: none
     cursor: pointer
+
+@media only screen and (min-width: 768px)
+  .modal
+    padding-left: 20px
+    padding-right: 20px
+    &__close
+      right: 20px
 
 @media only screen and (min-width: 1025px)
   .modal
