--- a/src/ui/search/styles.sass
+++ b/src/ui/search/styles.sass
@@ -1,13 +1,22 @@
 .search
-  margin-bottom: 30px
+  margin-top: 6px
+  margin-bottom: 15px
   height: 53px
   display: flex
   align-items: flex-start
+  &__field
+    position: relative
+    display: inline-block
+    padding-right: 23px
   &__input
-    max-width: 280px
     width: 100%
+    margin-right: 5px
   &__icon
-    margin: 5px
+    position: absolute
+    top: 0
+    right: 0
+    display: block
+    margin: 5px 0
     font-size: 18px
     color: $color-text
     cursor: pointer
@@ -15,10 +24,3 @@
     padding: 5px 23px 5px 5px
     font-size: 12px
     color: $color-text-lighter
-
-@media only screen and (min-width: 768px)
-  .search
-    position: absolute
-    top: 15px
-    right: 20px
-    justify-content: flex-end
