--- a/src/styles/layout/containers.sass
+++ b/src/styles/layout/containers.sass
@@ -1,6 +1,6 @@
 .container
   position: relative
-  max-width: 1200px
+  max-width: 1210px
   width: 100%
   padding: 0 10px
   margin: 0 auto
@@ -13,10 +13,11 @@
   display: flex
   flex-direction: column
   justify-content: space-between
+  min-height: 100vh
   &__aside
     padding-top: 20px
   &__main
-    padding-bottom: 70px
+    padding-bottom: 100px
 
 @media only screen and (min-width: 768px)
   .main-wrapper
