--- a/src/ui/search/styles.sass
+++ b/src/ui/search/styles.sass
@@ -1,6 +1,5 @@
 .search
-  margin-top: 6px
-  margin-bottom: 15px
+  margin-bottom: 30px
   height: 53px
   display: flex
   align-items: flex-start
@@ -8,9 +7,13 @@
     position: relative
     display: inline-block
     padding-right: 23px
-  &__input
+    max-width: 320px
     width: 100%
+  input
+    width: 100%
+  &__input
     margin-right: 5px
+    +line-focus
   &__icon
     position: absolute
     top: 0
@@ -18,9 +21,8 @@
     display: block
     margin: 5px 0
     font-size: 18px
-    color: $color-text
-    cursor: pointer
+    color: rgba($color-text, .6)
   &__error
-    padding: 5px 23px 5px 5px
+    padding: 5px
     font-size: 12px
     color: $color-text-lighter
