--- a/src/styles/settings/mixins.sass
+++ b/src/styles/settings/mixins.sass
@@ -33,7 +33,7 @@
     width: 0
     height: 1px
     margin-top: -1px
-    background-color: rgba($color-accent, .7)
+    background-color: rgba($color-text, .7)
     transition: $transition
   &:before
     left: 50%
