--- a/src/styles/layout/containers.sass
+++ b/src/styles/layout/containers.sass
@@ -35,3 +35,15 @@
       width: 100%
       padding-top: 65px
       padding-left: 170px
+
+@media only screen and (min-width: 768px)
+  .aside-wrapper::-webkit-scrollbar-track
+    border-radius: 2px
+    background: rgba($color-text, .1)
+  .aside-wrapper::-webkit-scrollbar
+    width: 4px
+    border-radius: 2px
+    background: rgba($color-text, .1)
+  .aside-wrapper::-webkit-scrollbar-thumb
+    border-radius: 2px
+    background: rgba($color-text, .3)
