Add preloader layout

--- a/src/styles/styles.sass
+++ b/src/styles/styles.sass
@@ -24,6 +24,7 @@
 
 @import './ui/modal/styles'
 @import './ui/search/styles'
+@import './ui/preloader/styles'
 
 @import './pages/Posts-list/styles'
 
