--- a/src/styles/basic/animations.sass
+++ b/src/styles/basic/animations.sass
@@ -9,3 +9,9 @@
     opacity: 0
   to
     opacity: 1
+
+@keyframes rotate
+  0%
+    transform: translate(-50%, -50%) rotate(0deg)
+  100%
+    transform: translate(-50%, -50%) rotate(360deg)
