--- a/src/styles/basic/basic.sass
+++ b/src/styles/basic/basic.sass
@@ -1,6 +1,7 @@
 body
   font-family: $primary-font
   font-size: 16px
+  font-display: auto
   line-height: 1
   color: $color-text
   background-color: $background-body
@@ -38,6 +39,5 @@ input
   color: $color-text
   transition: $transition
   &::-webkit-input-placeholder
-    font-size: 14px
     color: rgba($color-text, .2)
     transition: $transition
