--- a/src/components/header/main-nav/styles.sass
+++ b/src/components/header/main-nav/styles.sass
@@ -36,3 +36,6 @@
       display: flex
       align-items: center
       flex-wrap: wrap
+    &__item
+      &:not(:last-child)
+        margin-right: 15px
