--- a/src/pages/About/styles.sass
+++ b/src/pages/About/styles.sass
@@ -15,6 +15,8 @@
 
 @media only screen and (min-width: 400px)
   .about
+    img
+      margin-bottom: 0
     &__two-parts
       font-size: 0
     &__const,
@@ -22,8 +24,10 @@
       display: inline-block
       vertical-align: top
     &__const
+      position: relative
       width: 150px
       margin-right: -150px
+      z-index: 1
     &__var
       width: 100%
       padding-top: 15px
