--- a/src/styles/basic/animations.sass
+++ b/src/styles/basic/animations.sass
@@ -4,6 +4,12 @@
   &-enter-active
     animation: fade .2s
 
+.toggle-page
+  &-leave-active
+    animation: fade .3s reverse
+  &-enter-active
+    animation: fade .3s
+
 @keyframes fade
   from
     opacity: 0
