--- a/src/styles/icomoon/icomoon.sass
+++ b/src/styles/icomoon/icomoon.sass
@@ -20,13 +20,15 @@
   -moz-osx-font-smoothing: grayscale
 
 .icon
-  &-search:before
+  &-github:before
     content: "\e900"
-  &-arrow-right:before
+  &-search:before
     content: "\e901"
-  &-arrow-left:before
+  &-arrow-right:before
     content: "\e902"
-  &-facebook:before
+  &-arrow-left:before
     content: "\e903"
-  &-instagram:before
+  &-facebook:before
     content: "\e904"
+  &-instagram:before
+    content: "\e905"
