--- a/src/ui/preloader/styles.sass
+++ b/src/ui/preloader/styles.sass
@@ -12,7 +12,7 @@
   &__bounceball
     position: relative
     display: inline-block
-    height: 37px
+    height: 70px
     width: 15px
     margin: 0 5px
     &:before
@@ -25,11 +25,11 @@
       border-radius: 50%
       background-color: $color-accent
       transform-origin: 50%
-      animation: bounce 500ms alternate infinite ease
+      animation: bounce .5s alternate infinite ease
 
 @keyframes bounce
   0%
-    top: 30px
+    top: 70px
     height: 5px
     border-radius: 60px 60px 20px 20px
     transform: scaleX(2)
