--- a/src/pages/About/styles.sass
+++ b/src/pages/About/styles.sass
@@ -1,4 +1,8 @@
 .about
+  font-family: $decorate-font
+  p
+    font-size: 14px
+    line-height: 1.6
   img
     display: block
     margin: 0 auto 10px
@@ -9,7 +13,6 @@
     font-size: 13px
     line-height: 1.7
     text-align: right
-    font-family: $decorate-font
     &-name
       margin-top: 20px
 
