--- a/src/components/header/logo/styles.sass
+++ b/src/components/header/logo/styles.sass
@@ -4,6 +4,7 @@
   text-transform: uppercase
   color: rgba($color-text, .9)
   cursor: pointer
+  user-select: none
   &__link
     display: inline-block
     &.is-active
