--- a/src/styles/basic/basic.sass
+++ b/src/styles/basic/basic.sass
@@ -3,7 +3,7 @@ body
   font-size: 16px
   line-height: 1
   color: $color-text
-  background-color: $background-body
+  background-color: #ffffff
   -webkit-overflow-scrolling: touch
   &.is-fixed
     overflow: hidden
