--- a/src/components/header/main-nav/styles.sass
+++ b/src/components/header/main-nav/styles.sass
@@ -15,7 +15,7 @@
   &__link
     display: inline-block
     font-size: 20px
-    color: $color-text-lighter
+    color: rgba($color-text, .7)
     cursor: pointer
     +line-hover
   &__count
