--- a/src/pages/Post/styles.sass
+++ b/src/pages/Post/styles.sass
@@ -14,7 +14,7 @@
         color: $color-accent
   &__tags
     margin-bottom: 15px
-    color: rgba($color-text-lighter, .4)
+    color: rgba($color-text, .4)
     font-size: 17px
   &__tag
     display: inline-block
