--- a/src/components/copyright/styles.sass
+++ b/src/components/copyright/styles.sass
@@ -1,6 +1,6 @@
 .copyright
   padding-top: 10px
-  color: $color-text-lighter
+  color: rgba($color-text, .7)
   font-size: 14px
 
 @media only screen and (max-width: 767px)
