--- a/src/components/more-link/styles.sass
+++ b/src/components/more-link/styles.sass
@@ -1,7 +1,7 @@
 .more-link
   display: inline-block
   font-size: 18px
-  color: $color-text-lighter
+  color: rgba($color-text, .7)
   cursor: pointer
   border-bottom: 1px solid rgba($color-text, .2)
   +line-hover
