--- a/src/ui/search/styles.sass
+++ b/src/ui/search/styles.sass
@@ -9,6 +9,9 @@
     padding-right: 25px
     max-width: 330px
     width: 100%
+  label
+    font-size: 0
+    opacity: 0
   input
     width: 100%
   &__input
@@ -25,4 +28,4 @@
   &__error
     padding: 5px
     font-size: 12px
-    color: $color-text-lighter
+    color: rgba($color-text, .7)
