--- a/src/styles/settings/fonts.sass
+++ b/src/styles/settings/fonts.sass
@@ -1,2 +1,6 @@
 @import url(https://fonts.googleapis.com/css?family=Montserrat:300,400,700)
 @import url(https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700)
+
+@font-face
+  font-display: auto
+  
