Add progressive image

--- a/src/styles/styles.sass
+++ b/src/styles/styles.sass
@@ -28,6 +28,7 @@
 
 @import './pages/Posts-list/styles'
 
+@import '~progressive-image/dist/index'
 @import './pages/Post/styles'
 
 @import './pages/About/styles'
