Add initial text for post

--- a/src/pages/Post/styles.sass
+++ b/src/pages/Post/styles.sass
@@ -13,7 +13,7 @@
       &:hover
         color: $color-accent
   &__tags
-    margin-bottom: 15px
+    margin-bottom: 35px
     color: rgba($color-text, .4)
     font-size: 17px
   &__tag
@@ -43,6 +43,8 @@
   &__gallery-item
     &:not(:last-child)
       margin-bottom: 40px
+  &__gallery-title
+    margin-bottom: 10px
   &__map
     display: none
     position: absolute
