--- a/src/pages/Post/styles.sass
+++ b/src/pages/Post/styles.sass
@@ -24,7 +24,7 @@
       margin-right: 7px
   &__img
     position: relative
-    margin-bottom: 40px
+    margin-bottom: 30px
     text-align: center
     font-size: 0
     cursor: pointer
@@ -42,9 +42,14 @@
     +overflow-text(5)
   &__gallery-item
     &:not(:last-child)
-      margin-bottom: 40px
+      margin-bottom: 30px
   &__gallery-title
     margin-bottom: 10px
+  &__gallery-list
+    margin-bottom: 10px
+    padding-top: 5px
+    font-size: 14px
+    line-height: 1.5
   &__map
     display: none
     position: absolute
