Add Text to Post

--- a/src/pages/Post/styles.sass
+++ b/src/pages/Post/styles.sass
@@ -45,6 +45,7 @@
       margin-bottom: 30px
   &__gallery-title
     margin-bottom: 10px
+    padding-top: 30px
   &__gallery-list
     margin-bottom: 10px
     padding-top: 5px
@@ -61,6 +62,13 @@
     img
       max-width: 100%
       max-height: 22vw
+  &__quote
+    margin-bottom: 30px
+    margin-left: auto
+    max-width: 500px
+    font-family: $decorate-font
+    text-align: right
+    font-size: 13px
 
 @media only screen and (max-width: 767px)
   .post
