--- a/src/pages/About/styles.sass
+++ b/src/pages/About/styles.sass
@@ -5,7 +5,7 @@
     line-height: 1.6
   img
     display: block
-    margin: 0 auto 10px
+    margin-bottom: 10px
     max-width: 100%
   &__quote
     margin-left: auto
