--- a/src/pages/Post/styles.sass
+++ b/src/pages/Post/styles.sass
@@ -69,6 +69,18 @@
     font-family: $decorate-font
     text-align: right
     font-size: 13px
+    line-height: 1.4
+  &__footnote
+    position: relative
+    padding-left: 7px
+    font-size: 12px
+    line-height: 1.3
+    &:before
+      content: "*"
+      position: absolute
+      left: 0
+      top: -1px
+      display: inline-block
 
 @media only screen and (max-width: 767px)
   .post
