--- a/src/pages/Post/styles.sass
+++ b/src/pages/Post/styles.sass
@@ -81,6 +81,10 @@
       left: 0
       top: -1px
       display: inline-block
+  &__img-capture
+    margin-top: 15px
+    font-size: 12px
+    text-align: left
 
 @media only screen and (max-width: 767px)
   .post
