Refactor post components

--- a/src/styles/styles.sass
+++ b/src/styles/styles.sass
@@ -21,13 +21,17 @@
 @import './components/modals/gallery-modal/styles'
 @import './components/more-link/styles'
 @import './components/copyright/styles'
+@import './components/post/title/styles'
+@import './components/post/tags/styles'
+@import './components/post/description/styles'
+@import './components/post/quoter/styles'
+@import './components/post/footnote/styles'
 
 @import './ui/modal/styles'
 @import './ui/search/styles'
 @import './ui/preloader/styles'
 
 @import './pages/Posts-list/styles'
-
 @import './pages/Post/styles'
 
 @import './pages/About/styles'
