--- a/src/pages/Post/styles.sass
+++ b/src/pages/Post/styles.sass
@@ -1,73 +1,4 @@
 .post
-  &:not(:last-child)
-    margin-bottom: 100px
-  img
-    display: inline-block
-    max-width: 100%
-  &__img
-    position: relative
-    margin-bottom: 30px
-    text-align: center
-    font-size: 0
-    cursor: pointer
-    &-item
-      position: relative
-      display: inline-block
-      +img-hover
-    &.u-spaced
-      margin-left: -5px
-      margin-right: -5px
-      .post__img-item
-        padding: 5px
-        +img-hover(5px)
-  &__gallery-item
+  &__part
     &:not(:last-child)
       margin-bottom: 30px
-  &__gallery-title
-    margin-bottom: 10px
-    padding-top: 30px
-  &__gallery-list
-    margin-bottom: 10px
-    padding-top: 5px
-    font-size: 14px
-    line-height: 1.5
-  &__map
-    display: none
-    position: absolute
-    top: 34px
-    left: 34px
-    max-width: 255px
-    width: 100%
-    font-size: 0
-    img
-      max-width: 100%
-      max-height: 22vw
-  &__img-capture
-    margin-top: 15px
-    font-size: 12px
-    text-align: left
-
-@media only screen and (max-width: 767px)
-  .post
-    &__img-item
-      &.u-stretched
-        margin-left: -10px
-        margin-right: -10px
-
-@media only screen and (min-width: 480px)
-  .post
-    &__img
-      &.u-50
-        .post__img-item
-          max-width: 50%
-      &.u-33
-        .post__img-item
-          max-width: 33.3333%
-
-@media only screen and (min-width: 768px)
-  .post
-    &__map
-      display: block
-
-.progressive img.origin
-  animation-duration: .2s
