--- a/src/components/soc-links/styles.sass
+++ b/src/components/soc-links/styles.sass
@@ -2,6 +2,7 @@
   display: flex
   align-items: center
   margin-top: 5px
+  margin-bottom: 10px
   &__item
     &:not(:last-child)
       margin-right: 14px
