--- a/src/styles/settings/variables.sass
+++ b/src/styles/settings/variables.sass
@@ -4,7 +4,7 @@ $primary-font: 'Source Sans Pro', sans-serif
 
 // colors
 $color-text: #170F0F
-$color-text-lighter: #625858
+$color-text-lighter: #5E5454
 $color-accent: #fa3e2e
 
 // normal transition
