Add related posts

--- a/src/pages/Post/styles.sass
+++ b/src/pages/Post/styles.sass
@@ -2,3 +2,8 @@
   &__part
     &:not(:last-child)
       margin-bottom: 30px
+  &__related
+    margin: 100px 0 35px
+    font-size: 25px
+    font-family: $decorate-font
+    font-weight: bold
