--- a/src/components/post/tags/styles.sass
+++ b/src/components/post/tags/styles.sass
@@ -1,6 +1,6 @@
 .post-tags
   margin-bottom: 35px
-  color: rgba($color-text, .4)
+  color: $color-text-lighter
   font-size: 17px
   &__item
     display: inline-block
@@ -8,4 +8,3 @@
     margin-bottom: 5px
     &:not(:last-child)
       margin-right: 7px
-      
