Correct of colors

--- a/src/components/preview-post-small/styles.sass
+++ b/src/components/preview-post-small/styles.sass
@@ -25,7 +25,7 @@
         color: $color-accent
   &__tags
     margin-bottom: 15px
-    color: rgba($color-text, .4)
+    color: $color-text-lighter
     font-size: 16px
   &__tag
     display: inline-block
