Correct of colors

--- a/src/styles/settings/variables.sass
+++ b/src/styles/settings/variables.sass
@@ -4,7 +4,8 @@ $primary-font: 'Source Sans Pro', sans-serif
 
 // colors
 $color-text: #170F0F
-$color-text-lighter: #5E5454
+// $color-text-lighter: #5E5454
+$color-text-lighter: rgba($color-text, .6)
 $color-accent: #fa3e2e
 
 // normal transition
