--- a/src/components/post/title/styles.sass
+++ b/src/components/post/title/styles.sass
@@ -2,6 +2,7 @@
   margin-bottom: 10px
   line-height: 1.3
   &--link
+    display: inline-block
     cursor: pointer
     transition: $transition
     &:hover
