--- a/src/components/preview-post-small/styles.sass
+++ b/src/components/preview-post-small/styles.sass
@@ -35,6 +35,13 @@
       margin-right: 5px
   &__desc
     +overflow-text(3, 18px)
+  &__const
+    position: relative
+  &__map
+    position: absolute
+    top: 10px
+    left: 10px
+    width: 150px
 
 @media only screen and (min-width: 600px)
   .post-prev
