--- a/src/components/post/gallery/styles.sass
+++ b/src/components/post/gallery/styles.sass
@@ -41,14 +41,14 @@
         margin-right: -10px
 
 
-@media only screen and (min-width: 480px)
-  .post-gallery
-    &.u-50
-      .post-gallery__item
-        max-width: 50%
-    &.u-33
-      .post-gallery__item
-        max-width: 33.3333%
+// @media only screen and (min-width: 480px)
+.post-gallery
+  &.u-50
+    .post-gallery__item
+      max-width: 50%
+  &.u-33
+    .post-gallery__item
+      max-width: 33.3333%
 
 @media only screen and (min-width: 768px)
   .post-gallery
