--- a/src/styles/basic/basic.sass
+++ b/src/styles/basic/basic.sass
@@ -1,3 +1,6 @@
+html
+  overflow-y: scroll
+
 body
   font-family: $primary-font
   font-size: 16px
@@ -5,13 +8,13 @@ body
   color: $color-text
   background-color: #ffffff
   -webkit-overflow-scrolling: touch
-  &.is-fixed
-    overflow: hidden
-
-@media only screen and (min-width: 1025px)
-  body
-    &.is-fixed
-      margin-right: 15px
+//   &.is-fixed
+//     overflow: hidden
+//
+// @media only screen and (min-width: 1025px)
+//   body
+//     &.is-fixed
+//       margin-right: 15px
 
 a
   color: inherit
