--- a/src/components/post/gallery/styles.sass
+++ b/src/components/post/gallery/styles.sass
@@ -1,9 +1,4 @@
 .post-gallery
-  position: relative
-  margin-bottom: 30px
-  text-align: center
-  font-size: 0
-  cursor: pointer
   img
     display: inline-block
     max-width: 100%
@@ -23,15 +18,21 @@
       max-width: 100%
       max-height: 22vw
   &__capture
-    margin-top: 15px
+    margin: 15px 0 25px
     font-size: 13px
     text-align: left
-  &.u-spaced
-    margin-left: -5px
-    margin-right: -5px
-    .post-gallery__item
-      padding: 5px
-      +img-hover(5px)
+  &__grid
+    position: relative
+    margin-bottom: 30px
+    text-align: center
+    font-size: 0
+    cursor: pointer
+    &.u-spaced
+      margin-left: -5px
+      margin-right: -5px
+      .post-gallery__item
+        padding: 5px
+        +img-hover(5px)
 
 @media only screen and (max-width: 767px)
   .post-gallery
@@ -42,7 +43,7 @@
 
 
 // @media only screen and (min-width: 480px)
-.post-gallery
+.post-gallery__grid
   &.u-50
     .post-gallery__item
       max-width: 50%
