--- a/src/styles/basic/basic.sass
+++ b/src/styles/basic/basic.sass
@@ -8,8 +8,8 @@ body
   color: $color-text
   background-color: #ffffff
   -webkit-overflow-scrolling: touch
-//   &.is-fixed
-//     overflow: hidden
+  &.is-fixed
+    overflow: hidden
 //
 // @media only screen and (min-width: 1025px)
 //   body
