--- a/src/styles/basic/basic.sass
+++ b/src/styles/basic/basic.sass
@@ -1,6 +1,13 @@
 html
   overflow-y: scroll
+  &.is-fixed
+    overflow: hidden
 
+@media only screen and (min-width: 1025px)
+  html
+    &.is-fixed
+      margin-right: 15px
+      
 body
   font-family: $primary-font
   font-size: 16px
@@ -10,11 +17,6 @@ body
   -webkit-overflow-scrolling: touch
   &.is-fixed
     overflow: hidden
-//
-// @media only screen and (min-width: 1025px)
-//   body
-//     &.is-fixed
-//       margin-right: 15px
 
 a
   color: inherit
