--- a/src/styles/styles.sass
+++ b/src/styles/styles.sass
@@ -31,6 +31,7 @@
 @import './components/post/tags/styles'
 @import './components/post/title/styles'
 @import './components/post/quoter/styles'
+@import './components/post/text/styles'
 
 @import './ui/modal/styles'
 @import './ui/search/styles'
